# hatch-showcase

./: .gitignore  HISTORY.md  README.md  hatch.toml  mypy.ini  pyproject.toml
.github/workflows/: build.yml  publish.yml  test.yml
hatch_showcase/: __main__.py
hatch_showcase/cli/: __init__.py
src/hatch_showcase/: __about__.py  __main__.py  fib.py
src/hatch_showcase/cli/: __init__.py
tests/: conftest.py  test_cli.py  test_fib.py
