[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-showcase"
description = 'A project showcasing features and plugins for Hatch'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "hatch",
]
authors = [
  { name = "Ofek Lev", email = "oss@ofek.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click~=8.0.3",
]
dynamic = ["version"]

[project.urls]
Donate = "https://github.com/sponsors/ofek"
History = "https://github.com/ofek/hatch-showcase/blob/master/HISTORY.md"
Issues = "https://github.com/ofek/hatch-showcase/issues"
Source = "https://github.com/ofek/hatch-showcase"

[project.scripts]
hatch-showcase = "hatch_showcase.cli:hatch_showcase"

[tool.hatch.version]
path = "src/hatch_showcase/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hatch_showcase"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = ["hatch-mypyc>=0.5.0", "click"]
mypy-args = [
  "--no-warn-unused-ignores",
]

[tool.black]
include = '\.pyi?$'
line-length = 120
skip-string-normalization = true
target-version = ["py37"]

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["hatch_showcase"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/hatch_showcase/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
